--- a/music_player/templates/register.html
+++ b/music_player/templates/register.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #d9ed92; /* Set background color */
+            background-color: #d9ed92;
             font-family: Arial, sans-serif;
         }
 
@@ -17,8 +17,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            flex-direction: column; /* Adjusted flex direction */
-
+            flex-direction: column;
         }
 
         form {
@@ -26,15 +25,14 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            font-size: 20px; /* Added margin bottom */
-
+            font-size: 20px;
         }
 
         h2 {
             text-align: center;
             color: #333;
             margin-bottom: 20px;
-            font-size: 30px; /* Added margin bottom */
+            font-size: 30px;
         }
 
         button {
@@ -53,24 +51,23 @@
 
         .register-text {
             text-align: center;
-            margin-top: 10px; /* Added margin top */
-            color: #333; /* Set text color */
+            margin-top: 10px;
+            color: #333;
         }
 
         .title {
-            margin-bottom: 20px; /* Adjusted margin */
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2 class="title">MyMusic</h2> <!-- Adjusted margin -->
+        <h2 class="title">MyMusic</h2>
         <form method="post">
-            <h2>Register here</h2> <!-- Added as a heading inside the form -->
+            <h2>Register here</h2>
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Sign Up</button>
-            
         </form>
     </div>
 </body>
