--- a/music_player/templates/watch_later.html
+++ b/music_player/templates/watch_later.html
@@ -12,14 +12,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #d9ed92; /* Cute background color */
+            background-color: #d9ed92; 
         }
 
         .card {
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: #76c893; /* Card background color */
+            background-color: #76c893; 
             text-align: center;
             font-size: 30px ;
         }
